k3s/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: shuttle
spec:
  selector:
    cnpg.io/cluster: database
    cnpg.io/instanceRole: primary
  type: NodePort
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 5432
