k3s/database/ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: database
  namespace: shuttle
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`db.sadra.xyz`)
      kind: Rule
      services:
        - name: database-rw
          port: 5432
